--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #app-container {
-  font-family: 'futura-pt';
+  font-family: "futura-pt";
   font-weight: 300;
   letter-spacing: 0.3px; }
 
@@ -36,9 +36,8 @@
     font-weight: 500;
     letter-spacing: 1.8px;
     color: black; }
-  .name-container,
-  .name-container a:hover {
-    color: white; }
+    .name-container a:hover {
+      color: white; }
 
 .menu-item-container {
   visibility: hidden; }
@@ -64,8 +63,10 @@
         font-weight: 500;
         letter-spacing: 1.8px;
         color: black; }
-      .menu-item,
-      .menu-item a, .menu-item p:hover {
+        .menu-item p:hover,
+        .menu-item a:hover {
+          color: white; }
+      .menu-item p:hover {
         color: white; } }
 
 .responsive-container {
@@ -97,8 +98,10 @@
         font-weight: 500;
         letter-spacing: 1.8px;
         color: black; }
-      .responsive-container .menu-item-container .menu-item,
-      .responsive-container .menu-item-container .menu-item a, .responsive-container .menu-item-container .menu-item p:hover {
+        .responsive-container .menu-item-container .menu-item p:hover,
+        .responsive-container .menu-item-container .menu-item a:hover {
+          color: white; }
+      .responsive-container .menu-item-container .menu-item p:hover {
         color: white; }
     @media (min-width: 750px) {
       .responsive-container .menu-item-container {
@@ -205,6 +208,10 @@
     font-size: 1.5rem;
     font-weight: 300;
     text-transform: uppercase; }
+  .showcase-text-container .showcase-position {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 0.9rem; }
   @media (min-width: 750px) {
     .showcase-text-container {
       flex: 0 0 40%; } }
@@ -291,7 +298,7 @@
     @media (min-width: 750px) {
       .resume-body-container .sidebar-container {
         flex: 0 0 30%;
-        border-right: 1px solid #A5A5A5; } }
+        border-right: 1px solid #a5a5a5; } }
   .resume-body-container .right-panel-container {
     flex: 0 0 100%;
     padding: 1rem 0 0 0;
