--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,7 @@ $text-color-h2: #68c9ba;
 $text-link: #5db2a6;
 
 #app-container {
-  font-family: 'futura-pt';
+  font-family: "futura-pt";
   font-weight: 300;
   letter-spacing: 0.3px;
 }
@@ -68,9 +68,9 @@ $text-link: #5db2a6;
     font-weight: 500;
     letter-spacing: 1.8px;
     color: $text-color-dark;
-  },
-  a:hover {
-    color: white;
+    &:hover {
+      color: white;
+    }
   }
 }
 
@@ -99,8 +99,11 @@ $text-link: #5db2a6;
       font-weight: 500;
       letter-spacing: 1.8px;
       color: $text-color-dark;
-    },
-    a,p:hover {
+      &:hover {
+        color: white;
+      }
+    }
+    p:hover {
       color: white;
     }
   }
@@ -130,7 +133,7 @@ $text-link: #5db2a6;
       justify-content: center;
       visibility: visible;
       flex: 0 0 100%;
-      p ,
+      p,
       a {
         text-transform: uppercase;
         text-decoration: none;
@@ -138,8 +141,11 @@ $text-link: #5db2a6;
         font-weight: 500;
         letter-spacing: 1.8px;
         color: $text-color-dark;
-      },
-      a,p:hover {
+        &:hover {
+          color: white;
+        }
+      }
+      p:hover {
         color: white;
       }
     }
@@ -185,7 +191,7 @@ $text-link: #5db2a6;
   margin: 5rem 2rem 2rem 2rem;
   @include medium {
     width: 40%;
-  };
+  }
 }
 
 .grid-container {
@@ -277,6 +283,12 @@ $text-link: #5db2a6;
     }
   }
 
+  .showcase-position {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+  }
+
   @include medium {
     flex: 0 0 40%;
   }
@@ -305,7 +317,7 @@ $text-link: #5db2a6;
 
   @include medium {
     flex-wrap: nowrap;
-  };
+  }
 
   h1 {
     text-transform: uppercase;
@@ -385,8 +397,8 @@ $text-link: #5db2a6;
     border: none;
     @include medium {
       flex: 0 0 30%;
-      border-right: 1px solid #A5A5A5;
-    };
+      border-right: 1px solid #a5a5a5;
+    }
   }
   .right-panel-container {
     flex: 0 0 100%;
@@ -395,6 +407,6 @@ $text-link: #5db2a6;
     padding: 1.5rem 3rem 3rem 3rem;
     @include medium {
       flex: 0 0 65%;
-    };
+    }
   }
 }
