--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,17 @@ $large-width: 1024px;
   }
 }
 
+button {
+  border: 1px solid white;
+  padding: 0rem 1rem;
+  font-size: 0.8rem;
+}
+
+.disabled {
+  background-color: gray;
+  border: 1px solid gray;
+}
+
 $background-color-dark: #75d6c7;
 $text-color-dark: black;
 $text-color-h2: #68c9ba;
@@ -31,13 +42,25 @@ $text-link: #5db2a6;
   letter-spacing: 0.3px;
 }
 
+.banner {
+  display: flex;
+  justify-content: space-between;
+  background-color: darkcyan;
+  color: white;
+  padding: 0.5rem 3rem 0.5rem 3rem;
+}
+
+@media all and (display-mode: standalone) {
+  .banner {
+    display: none;
+  }
+}
+
 .navbar-container {
   display: flex;
   justify-content: space-between;
   background-color: $background-color-dark;
   opacity: 0.8;
-  position: fixed;
-  top: 0;
   left: 0;
   width: 100%;
   height: 3.5rem;
