--- a/src/App.scss
+++ b/src/App.scss
@@ -20,183 +20,57 @@ $large-width: 1024px;
   }
 }
 
-button {
-  border: 1px solid white;
-  padding: 0rem 1rem;
-  font-size: 0.8rem;
-}
-
-.disabled {
-  background-color: gray;
-  border: 1px solid gray;
-}
-
 $background-color-dark: #75d6c7;
 $text-color-dark: black;
 $text-color-h2: #68c9ba;
 $text-link: #5db2a6;
 
-#app-container {
+body {
   font-family: "futura-pt";
   font-weight: 300;
   letter-spacing: 0.3px;
 }
 
-.banner {
+.navbar {
   display: flex;
   justify-content: space-between;
-  background-color: darkcyan;
-  color: white;
-  padding: 0.5rem 3rem 0.5rem 3rem;
-}
-
-@media all and (display-mode: standalone) {
-  .banner {
-    display: none;
-  }
-}
-
-.navbar-container {
-  display: flex;
-  justify-content: space-between;
+  align-items: center;
   background-color: $background-color-dark;
   opacity: 0.8;
-  left: 0;
-  width: 100%;
-  height: 3.5rem;
-}
-
-.hamburger {
-  visibility: visible;
-  display: flex;
-  align-items: center;
-  padding-right: 2rem;
-  cursor: pointer;
-
-  @include medium {
-    visibility: hidden;
-  }
-}
-
-.name-container {
-  display: flex;
-  padding-left: 3rem;
-  flex: 0 0 40%;
-  align-items: center;
-
+  padding-right: 3rem;
+  font-weight: 500;
   a {
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 1rem;
-    font-weight: 500;
-    letter-spacing: 1.8px;
-    color: $text-color-dark;
-    &:hover {
-      color: white;
-    }
+    color: black;
+    margin-left: 3rem;
   }
-}
 
-.menu-item-container {
-  visibility: hidden;
-  @include medium {
-    visibility: visible;
-    display: flex;
-    align-items: center;
-    flex: 0 0 50%;
-    justify-content: flex-end;
+  a:hover {
+    color: white;
   }
-}
 
-.menu-item {
-  visibility: hidden;
-
-  @include medium {
-    padding-left: 2rem;
-    visibility: visible;
-    p,
+  .nav-right {
     a {
-      text-transform: uppercase;
-      text-decoration: none;
-      font-size: 0.85rem;
-      font-weight: 500;
-      letter-spacing: 1.8px;
-      color: $text-color-dark;
-      &:hover {
-        color: white;
-      }
-    }
-    p:hover {
-      color: white;
+      font-size: 14px;
     }
   }
 }
 
-.responsive-container {
-  background-color: $background-color-dark;
-  opacity: 0.8;
-  position: fixed;
-  width: 100%;
-
-  .name-container {
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    @include medium {
-      justify-content: flex-start;
-      padding-left: 3rem;
-    }
-  }
-  .menu-item-container {
-    display: flex;
-    flex-wrap: wrap;
-
-    .menu-item {
-      display: flex;
-      justify-content: center;
-      visibility: visible;
-      flex: 0 0 100%;
-      p,
-      a {
-        text-transform: uppercase;
-        text-decoration: none;
-        font-size: 0.85rem;
-        font-weight: 500;
-        letter-spacing: 1.8px;
-        color: $text-color-dark;
-        &:hover {
-          color: white;
-        }
-      }
-      p:hover {
-        color: white;
-      }
-    }
-
-    @include medium {
-      display: flex;
-      align-items: center;
-      flex: 0 0 50%;
-      justify-content: flex-end;
-    }
-  }
-
-  .hamburger {
-    position: fixed;
-    top: 0;
-    right: 0;
-    padding-top: 0.2rem;
-
-    @include medium {
-      visibility: visible;
-    }
-  }
+.notification,
+.notification:not(:last-child) {
+  background-color: lightslategrey;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 0%;
+  margin: 0;
+  font-family: sans-serif;
 }
 
 .work-container {
   margin: auto;
   box-sizing: border-box;
-  padding-top: 3rem;
+  padding-top: 1rem;
 }
 
 .grid-area-container {
@@ -261,6 +135,7 @@ $text-link: #5db2a6;
       text-align: center;
       letter-spacing: 1px;
       margin: 0;
+      font-weight: 400;
     }
   }
   .caption-subtext {
@@ -393,6 +268,7 @@ $text-link: #5db2a6;
     align-items: center;
     img {
       margin-right: 0.3rem;
+      max-width: 1.5rem;
     }
   }
   .address-block {
@@ -410,6 +286,7 @@ $text-link: #5db2a6;
       line-height: 2rem;
       img {
         margin: 0 0.4rem 0 0.4rem;
+        max-width: 1.5rem;
       }
     }
   }
