--- a/src/App.scss
+++ b/src/App.scss
@@ -32,17 +32,12 @@ body {
 }
 
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   background-color: $background-color-dark;
   opacity: 0.8;
-  padding-right: 3rem;
   font-weight: 500;
-  a {
-    color: black;
-    margin-left: 3rem;
-  }
+  z-index: 100;
+  padding-right: 1rem;
+  padding-left: 1rem;
 
   a:hover {
     color: white;
@@ -53,18 +48,52 @@ body {
       font-size: 14px;
     }
   }
+  button {
+    border: none;
+    background-color: $background-color-dark;
+  }
+  button:hover {
+    background-color: transparent;
+  }
+
+  .field.is-grouped {
+    justify-content: center;
+    flex-wrap: wrap;
+
+    .control {
+      flex: 100%;
+      text-align: center;
+      margin: 0;
+      padding: 5px;
+
+      a {
+        color: #4a4a4a;
+      }
+      a:hover {
+        color: white;
+      }
+    }
+  }
+}
+
+.navbar-menu.is-active {
+  background-color: $background-color-dark;
 }
 
 .notification,
 .notification:not(:last-child) {
   background-color: lightslategrey;
-  color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-radius: 0%;
   margin: 0;
   font-family: sans-serif;
+  p {
+    color: white;
+    padding-right: 0.5rem;
+    font-size: 0.9rem;
+  }
 }
 
 .work-container {
